<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding_big">


    <TextView
        android:id="@+id/textView"
        style="@style/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_email_txt"
            style="@style/BarakatextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_password_txt"
            style="@style/BarakatextField"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_sign_in_btn"
        style="@style/BarakahButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/action_signin"

        android:textColor="#FFFFFF"

        />

    <Button
        android:id="@+id/login_signup_btn"
        style="@style/BarakahButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/action_signup"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/login_forgot_password_txt"
        style="@style/BarakatextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_forgot_password" />
</LinearLayout>