<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung_gray"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding_big"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView6"
        style="@style/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_fragment_password_reset" />

    <TextView
        android:id="@+id/forgot_password_message"
        style="@style/BarakatextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:text="@string/message_password_reset"
        android:textAlignment="center"

        android:textColor="@color/primary_text" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgot_password_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/forgot_password_email"
            style="@style/BarakatextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forgot_password_send"
        style="@style/BarakahButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/action_send"
        android:textColor="#FFFFFF" />

</LinearLayout>