<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroung_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding_big">

    <TextView
        android:id="@+id/feedback_title"
        style="@style/primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_feedback"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/feedback_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/feedback_email"
            style="@style/BarakatextField"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/feedback_input_layout_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/feedback_message"
            style="@style/BarakatextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/hint_message"
            android:inputType="textMultiLine"
            android:lines="5">

            <requestFocus />
        </EditText>
    </android.support.design.widget.TextInputLayout>


</LinearLayout>
